--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">NearBy</string>
     <string name="single_update">Single update</string>
     <string name="realtime">RealTime</string>
-    <string name="please_wait">Please wait ...</string>
+    <string name="please_wait">Please wait …</string>
     <string name="no_data_found">No data found !!</string>
+    <string name="network_error">Something went wrong !!</string>
 </resources>
